# MOLTOP

./: Makefile  README.md  data_loading.py  feature_extraction.py  main_baselines.py  main_ecfp.py  main_feature_importances.py  main_graph_kernels.py  main_lrgb.py  main_moltop.py  models.py  pyproject.toml  requirements.txt  utils.py
expressivity/: 1_wl_molecular.py  1_wl_simple.py  3_regular_small.py  3_wl.py  benchmark_graph8c.py  benchmark_sr25.py  utils.py
scripts/: 3_regular_molecules.py  dataset_mols_sizes.py  decalin_and_bicyclopentyl.py  dpcc_and_paclitaxel.py  wilcoxon.py
